--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
+body {
+  background-color: #094c61;
+}
+
 /* General game container styling */
 .game {
   text-align: center;
   font-family: 'Arial', sans-serif;
   margin-top: 50px;
+  color: white;
+
 }
 
 /* Styling for word rows */
@@ -31,6 +37,7 @@
   font-weight: bold;
   border-color: #333; /* Darker border for emphasis */
   background-color: #f0f0f0; /* Light background */
+  color: #333; /* Darker text color */
 }
 
 /* Correct letter styling */
